# listing-guide-Webapp

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
src/: app.py  category_dict.py  scrapper.py
