[project]
name = "listing-guid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "bs4==0.0.2",
    "httpx==0.28.1",
    "streamlit>=1.42.0",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-custom-notification-box>=0.1.2",
    "streamlit-tags>=1.2.8",
]
